--- a/ci-operator/jobs/openshift/oc/openshift-oc-release-4.6-presubmits.yaml
+++ b/ci-operator/jobs/openshift/oc/openshift-oc-release-4.6-presubmits.yaml
@@ -119,7 +119,7 @@ presubmits:
           secretName: sentry-dsn
     trigger: (?m)^/test( | .* )e2e-aws,?($|\s.*)
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - release-4.6
     context: ci/prow/e2e-aws-builds
@@ -131,6 +131,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-oc-release-4.6-e2e-aws-builds
     rerun_command: /test e2e-aws-builds
+    run_if_changed: ^(pkg/.*build.*)|^(pkg/.*newapp.*)
     spec:
       containers:
       - args:
