--- a/ci-operator/jobs/openshift/builder/openshift-builder-release-4.6-presubmits.yaml
+++ b/ci-operator/jobs/openshift/builder/openshift-builder-release-4.6-presubmits.yaml
@@ -211,7 +211,7 @@ presubmits:
           secretName: sentry-dsn
     trigger: (?m)^/test( | .* )e2e-aws-image-ecosystem,?($|\s.*)
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - release-4.6
     context: ci/prow/e2e-aws-proxy
@@ -222,6 +222,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-builder-release-4.6-e2e-aws-proxy
+    optional: true
     rerun_command: /test e2e-aws-proxy
     spec:
       containers:
