--- a/ci-operator/jobs/openshift/cluster-api-provider-gcp/openshift-cluster-api-provider-gcp-release-4.6-presubmits.yaml
+++ b/ci-operator/jobs/openshift/cluster-api-provider-gcp/openshift-cluster-api-provider-gcp-release-4.6-presubmits.yaml
@@ -12,6 +12,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-cluster-api-provider-gcp-release-4.6-e2e-gcp
+    optional: true
     rerun_command: /test e2e-gcp
     spec:
       containers:
