--- a/ci-operator/jobs/openshift/cluster-kube-apiserver-operator/openshift-cluster-kube-apiserver-operator-release-4.6-presubmits.yaml
+++ b/ci-operator/jobs/openshift/cluster-kube-apiserver-operator/openshift-cluster-kube-apiserver-operator-release-4.6-presubmits.yaml
@@ -142,7 +142,7 @@ presubmits:
           secretName: sentry-dsn
     trigger: (?m)^/test( | .* )e2e-aws-operator,?($|\s.*)
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - release-4.6
     context: ci/prow/e2e-aws-operator-encryption
@@ -154,6 +154,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-cluster-kube-apiserver-operator-release-4.6-e2e-aws-operator-encryption
     rerun_command: /test e2e-aws-operator-encryption
+    run_if_changed: ^(vendor/github.com/openshift/library-go/pkg/operator/encryption)|^(test/e2e-encryption)|^(test/library/encryption)
     spec:
       containers:
       - args:
@@ -213,7 +214,7 @@ presubmits:
           secretName: sentry-dsn
     trigger: (?m)^/test( | .* )e2e-aws-operator-encryption,?($|\s.*)
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - release-4.6
     context: ci/prow/e2e-aws-operator-encryption-perf
@@ -225,6 +226,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-cluster-kube-apiserver-operator-release-4.6-e2e-aws-operator-encryption-perf
     rerun_command: /test e2e-aws-operator-encryption-perf
+    run_if_changed: ^(vendor/github.com/openshift/library-go/pkg/operator/encryption)|^(test/e2e-encryption-perf)|^(test/library/encryption)
     spec:
       containers:
       - args:
