--- a/ci-operator/jobs/openshift/cluster-machine-approver/openshift-cluster-machine-approver-release-4.6-presubmits.yaml
+++ b/ci-operator/jobs/openshift/cluster-machine-approver/openshift-cluster-machine-approver-release-4.6-presubmits.yaml
@@ -154,6 +154,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-cluster-machine-approver-release-4.6-e2e-azure-operator
+    optional: true
     rerun_command: /test e2e-azure-operator
     spec:
       containers:
@@ -226,6 +227,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-cluster-machine-approver-release-4.6-e2e-gcp-operator
+    optional: true
     rerun_command: /test e2e-gcp-operator
     spec:
       containers:
