--- a/ci-operator/jobs/openshift/cluster-samples-operator/openshift-cluster-samples-operator-release-4.6-presubmits.yaml
+++ b/ci-operator/jobs/openshift/cluster-samples-operator/openshift-cluster-samples-operator-release-4.6-presubmits.yaml
@@ -71,7 +71,7 @@ presubmits:
           secretName: sentry-dsn
     trigger: (?m)^/test( | .* )e2e-aws,?($|\s.*)
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - release-4.6
     context: ci/prow/e2e-aws-builds
@@ -83,6 +83,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-cluster-samples-operator-release-4.6-e2e-aws-builds
     rerun_command: /test e2e-aws-builds
+    run_if_changed: ^(tmp/build)
     spec:
       containers:
       - args:
@@ -211,7 +212,7 @@ presubmits:
           secretName: sentry-dsn
     trigger: (?m)^/test( | .* )e2e-aws-image-ecosystem,?($|\s.*)
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - release-4.6
     context: ci/prow/e2e-aws-jenkins
@@ -223,6 +224,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-cluster-samples-operator-release-4.6-e2e-aws-jenkins
     rerun_command: /test e2e-aws-jenkins
+    run_if_changed: ^(tmp/build)
     spec:
       containers:
       - args:
