--- a/ci-operator/jobs/openshift/cluster-version-operator/openshift-cluster-version-operator-release-4.6-presubmits.yaml
+++ b/ci-operator/jobs/openshift/cluster-version-operator/openshift-cluster-version-operator-release-4.6-presubmits.yaml
@@ -180,6 +180,53 @@ presubmits:
     always_run: true
     branches:
     - release-4.6
+    context: ci/prow/integration
+    decorate: true
+    labels:
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
+    name: pull-ci-openshift-cluster-version-operator-release-4.6-integration
+    rerun_command: /test integration
+    spec:
+      containers:
+      - args:
+        - --artifact-dir=$(ARTIFACTS)
+        - --give-pr-author-access-to-namespace=true
+        - --target=integration
+        - --template=/usr/local/integration
+        command:
+        - ci-operator
+        env:
+        - name: COMMAND
+          value: hack/test-integration.sh
+        - name: CONFIG_SPEC
+          valueFrom:
+            configMapKeyRef:
+              key: openshift-cluster-version-operator-release-4.6.yaml
+              name: ci-operator-4.6-configs
+        - name: JOB_NAME_SAFE
+          value: integration
+        - name: LOCAL_IMAGE_TEST_BIN
+          value: pipeline:src
+        image: ci-operator:latest
+        imagePullPolicy: Always
+        name: ""
+        resources:
+          requests:
+            cpu: 10m
+        volumeMounts:
+        - mountPath: /usr/local/integration
+          name: job-definition
+          subPath: master-sidecar-4.4.yaml
+      serviceAccountName: ci-operator
+      volumes:
+      - configMap:
+          name: prow-job-release-master-sidecar-4.4
+        name: job-definition
+    trigger: (?m)^/test( | .* )integration,?($|\s.*)
+  - agent: kubernetes
+    always_run: true
+    branches:
+    - release-4.6
     context: ci/prow/unit
     decorate: true
     decoration_config:
