--- a/ci-operator/jobs/openshift/kubernetes-autoscaler/openshift-kubernetes-autoscaler-release-4.6-presubmits.yaml
+++ b/ci-operator/jobs/openshift/kubernetes-autoscaler/openshift-kubernetes-autoscaler-release-4.6-presubmits.yaml
@@ -85,6 +85,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-kubernetes-autoscaler-release-4.6-e2e-azure-operator
+    optional: true
     path_alias: k8s.io/autoscaler
     rerun_command: /test e2e-azure-operator
     spec:
@@ -158,6 +159,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-kubernetes-autoscaler-release-4.6-e2e-gcp-operator
+    optional: true
     path_alias: k8s.io/autoscaler
     rerun_command: /test e2e-gcp-operator
     spec:
@@ -233,6 +235,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-kubernetes-autoscaler-release-4.6-git-history
+    optional: true
     path_alias: k8s.io/autoscaler
     rerun_command: /test git-history
     spec:
