--- a/ci-operator/jobs/openshift/openshift-controller-manager/openshift-openshift-controller-manager-release-4.6-presubmits.yaml
+++ b/ci-operator/jobs/openshift/openshift-controller-manager/openshift-openshift-controller-manager-release-4.6-presubmits.yaml
@@ -71,7 +71,7 @@ presubmits:
           secretName: sentry-dsn
     trigger: (?m)^/test( | .* )e2e-aws,?($|\s.*)
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - release-4.6
     context: ci/prow/e2e-aws-builds
@@ -83,6 +83,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-openshift-controller-manager-release-4.6-e2e-aws-builds
     rerun_command: /test e2e-aws-builds
+    run_if_changed: ^(pkg/build)
     spec:
       containers:
       - args:
@@ -141,7 +142,7 @@ presubmits:
           secretName: sentry-dsn
     trigger: (?m)^/test( | .* )e2e-aws-builds,?($|\s.*)
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - release-4.6
     context: ci/prow/e2e-aws-proxy
@@ -152,6 +153,7 @@ presubmits:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-openshift-openshift-controller-manager-release-4.6-e2e-aws-proxy
+    optional: true
     rerun_command: /test e2e-aws-proxy
     spec:
       containers:
@@ -268,7 +270,7 @@ presubmits:
           secretName: sentry-dsn
     trigger: (?m)^/test( | .* )e2e-aws-upgrade,?($|\s.*)
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - release-4.6
     context: ci/prow/e2e-gcp
@@ -340,7 +342,7 @@ presubmits:
           secretName: sentry-dsn
     trigger: (?m)^/test( | .* )e2e-gcp,?($|\s.*)
   - agent: kubernetes
-    always_run: true
+    always_run: false
     branches:
     - release-4.6
     context: ci/prow/e2e-gcp-builds
