step-registry: add Origin E2E test step

--- a/ci-operator/config/openshift/installer/openshift-installer-master.yaml
+++ b/ci-operator/config/openshift/installer/openshift-installer-master.yaml
@@ -198,7 +198,6 @@ tests:
   openshift_installer_upi:
     cluster_profile: vsphere
 - as: e2e-steps
-  commands: ""
   steps:
     cluster_profile: aws
-    workflow: ipi
+    workflow: origin-e2e
