disable endurance upgrade jobs while debugging cluster

--- a/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-release-4.3-periodics.yaml
@@ -1,6 +1,6 @@
 periodics:
 - agent: kubernetes
-  cron: 0 0 * * 1
+  cron: '@yearly'
   decorate: true
   labels:
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
