--- a/ci-operator/jobs/openshift/release/openshift-release-infra-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-infra-periodics.yaml
@@ -288,7 +288,7 @@ periodics:
   decorate: true
   labels:
     job-env: metal
-    job-release: "4.2"
+    job-release: "4.4"
     job-type: launch
   name: release-openshift-origin-installer-launch-metal
   spec:
@@ -311,7 +311,7 @@ periodics:
       - name: CLUSTER_DURATION
         value: "9000"
       - name: BRANCH
-        value: "4.2"
+        value: "master"
       - name: CLUSTER_TYPE
         value: metal
       - name: CONFIG_SPEC
