--- a/ci-operator/jobs/openshift/release/openshift-release-infra-periodics.yaml
+++ b/ci-operator/jobs/openshift/release/openshift-release-infra-periodics.yaml
@@ -290,6 +290,7 @@ periodics:
     job-env: metal
     job-release: "4.4"
     job-type: launch
+    pj-rehearse.openshift.io/can-be-rehearsed: "true"
   name: release-openshift-origin-installer-launch-metal
   spec:
     containers:
