mention the cron time in correct format

--- a/ci-operator/jobs/redhat-developer/service-binding-operator/redhat-developer-service-binding-operator-master-periodics.yaml
+++ b/ci-operator/jobs/redhat-developer/service-binding-operator/redhat-developer-service-binding-operator-master-periodics.yaml
@@ -1,6 +1,6 @@
 periodics:
 - agent: kubernetes
-  cron:  */5 * * * *
+  cron: "*/5 * * * *"
   decorate: true
   decoration_config:
     skip_cloning: true
