Add cron job for dev-release make target

--- a/ci-operator/config/redhat-developer/service-binding-operator/redhat-developer-service-binding-operator-master.yaml
+++ b/ci-operator/config/redhat-developer/service-binding-operator/redhat-developer-service-binding-operator-master.yaml
@@ -39,3 +39,10 @@ tests:
   commands: VERBOSE=2 LOGS_DIR=/tmp/artifacts make -k test-e2e parse-test-e2e-operator-log
   openshift_installer_src:
     cluster_profile: aws
+- as: dev-release
+  commands: make dev-release
+  cron: "*/5 * * * *"
+  container:
+    from: src
+  # openshift_installer_src:
+  #   cluster_profile: aws
