--- a/ci-operator/config/redhat-developer/service-binding-operator/redhat-developer-service-binding-operator-master.yaml
+++ b/ci-operator/config/redhat-developer/service-binding-operator/redhat-developer-service-binding-operator-master.yaml
@@ -42,6 +42,7 @@ tests:
 - as: dev-release
   commands: make dev-release
   cron: "*/5 * * * *"
+  # container to be removed
   container:
     from: src
   # openshift_installer_src:
