--- a/ci-operator/config/redhat-developer/service-binding-operator/redhat-developer-service-binding-operator-master.yaml
+++ b/ci-operator/config/redhat-developer/service-binding-operator/redhat-developer-service-binding-operator-master.yaml
@@ -41,9 +41,6 @@ tests:
     cluster_profile: aws
 - as: dev-release
   commands: make dev-release
-  cron: "*/5 * * * *"
-  # container to be removed
-  container:
-    from: src
-  # openshift_installer_src:
-  #   cluster_profile: aws
+  cron: "0 */8 * * *"
+  openshift_installer_src:
+    cluster_profile: aws
