adding e2e test for ansible tower config repo

--- a/ci-operator/config/integr8ly/ansible-tower-configuration/integr8ly-ansible-tower-configuration-master.yaml
+++ b/ci-operator/config/integr8ly/ansible-tower-configuration/integr8ly-ansible-tower-configuration-master.yaml
@@ -11,7 +11,10 @@ resources:
       cpu: 100m
       memory: 200Mi
 tests:
-- as: format
-  commands: echo "Success"
+- as: e2e
+  commands: make test/e2e
+  secret:
+    name: integr8ly-tower-secrets
+    mount_path: /usr/local/integr8ly-tower-secrets
   container:
     from: src
