--- a/ci-operator/jobs/integr8ly/ansible-tower-configuration/integr8ly-ansible-tower-configuration-master-presubmits.yaml
+++ b/ci-operator/jobs/integr8ly/ansible-tower-configuration/integr8ly-ansible-tower-configuration-master-presubmits.yaml
@@ -4,15 +4,15 @@ presubmits:
     always_run: true
     branches:
     - master
-    context: ci/prow/format
+    context: ci/prow/e2e
     decorate: true
     decoration_config:
       skip_cloning: true
     labels:
       ci-operator.openshift.io/prowgen-controlled: "true"
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-integr8ly-ansible-tower-configuration-master-format
-    rerun_command: /test format
+    name: pull-ci-integr8ly-ansible-tower-configuration-master-e2e
+    rerun_command: /test e2e
     spec:
       containers:
       - args:
@@ -22,8 +22,9 @@ presubmits:
         - --org=integr8ly
         - --repo=ansible-tower-configuration
         - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
+        - --secret-dir=/usr/local/integr8ly-tower-secrets
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
-        - --target=format
+        - --target=e2e
         command:
         - ci-operator
         env:
@@ -39,12 +40,18 @@ presubmits:
           requests:
             cpu: 10m
         volumeMounts:
+        - mountPath: /usr/local/integr8ly-tower-secrets
+          name: integr8ly-tower-secrets
+          readOnly: true
         - mountPath: /etc/sentry-dsn
           name: sentry-dsn
           readOnly: true
       serviceAccountName: ci-operator
       volumes:
+      - name: integr8ly-tower-secrets
+        secret:
+          secretName: integr8ly-tower-secrets
       - name: sentry-dsn
         secret:
           secretName: sentry-dsn
-    trigger: (?m)^/test( | .* )format,?($|\s.*)
+    trigger: (?m)^/test( | .* )e2e,?($|\s.*)
