Add more CM on build01

--- a/core-services/ci-secret-bootstrap/_config.yaml
+++ b/core-services/ci-secret-bootstrap/_config.yaml
@@ -532,6 +532,9 @@
     - cluster: default
       namespace: ci
       name: cluster-secrets-gcp
+    - cluster: build01
+      namespace: ci
+      name: cluster-secrets-gcp
 # openstack
 - from:
     pull-secret:
@@ -598,6 +601,9 @@
     - cluster: default
       namespace: ci
       name: cluster-secrets-vsphere
+    - cluster: build01
+      namespace: ci
+      name: cluster-secrets-vsphere
 # metal
 - from:
     pull-secret:
@@ -644,6 +650,9 @@
       attachment: ssh-publickey
   to:
     - cluster: default
+      namespace: ci
+      name: cluster-secrets-azure4
+    - cluster: build01
       namespace: ci
       name: cluster-secrets-azure4
 # cluster-secrets-azure is not synced. Email sent to Jim about this.
