Add configresolver flags to all presubmits and postsubmits

--- a/ci-operator/jobs/codeready-toolchain/toolchain-operator/codeready-toolchain-toolchain-operator-master-postsubmits.yaml
+++ b/ci-operator/jobs/codeready-toolchain/toolchain-operator/codeready-toolchain-toolchain-operator-master-postsubmits.yaml
@@ -11,7 +11,11 @@ postsubmits:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
+        - --branch=master
         - --give-pr-author-access-to-namespace=true
+        - --org=codeready-toolchain
+        - --repo=toolchain-operator
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=build
         command:
@@ -48,7 +52,11 @@ postsubmits:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
+        - --branch=master
         - --give-pr-author-access-to-namespace=true
+        - --org=codeready-toolchain
+        - --repo=toolchain-operator
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --secret-dir=/usr/local/e2e-cluster-profile
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=e2e
@@ -131,7 +139,11 @@ postsubmits:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
+        - --branch=master
         - --give-pr-author-access-to-namespace=true
+        - --org=codeready-toolchain
+        - --repo=toolchain-operator
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=test
         command:
