--- a/ci-operator/jobs/openshift/cluster-api-provider-libvirt/openshift-cluster-api-provider-libvirt-release-4.6-presubmits.yaml
+++ b/ci-operator/jobs/openshift/cluster-api-provider-libvirt/openshift-cluster-api-provider-libvirt-release-4.6-presubmits.yaml
@@ -61,7 +61,11 @@ presubmits:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
+        - --branch=release-4.6
         - --give-pr-author-access-to-namespace=true
+        - --org=openshift
+        - --repo=cluster-api-provider-libvirt
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --secret-dir=/usr/local/e2e-libvirt-cluster-profile
         - --target=e2e-libvirt
         - --template=/usr/local/e2e-libvirt
