--- a/ci-operator/jobs/openshift/image-registry/openshift-image-registry-master-presubmits.yaml
+++ b/ci-operator/jobs/openshift/image-registry/openshift-image-registry-master-presubmits.yaml
@@ -258,7 +258,11 @@ presubmits:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
+        - --branch=master
         - --give-pr-author-access-to-namespace=true
+        - --org=openshift
+        - --repo=image-registry
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --target=integration
         - --template=/usr/local/integration
         command:
