--- a/ci-operator/jobs/openshift/origin/openshift-origin-release-3.11-presubmits.yaml
+++ b/ci-operator/jobs/openshift/origin/openshift-origin-release-3.11-presubmits.yaml
@@ -13,7 +13,11 @@ presubmits:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
+        - --branch=release-3.11
         - --give-pr-author-access-to-namespace=true
+        - --org=openshift
+        - --repo=origin
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --target=artifacts
         command:
         - ci-operator
