--- a/ci-operator/jobs/codeready-toolchain/toolchain-common/codeready-toolchain-toolchain-common-master-postsubmits.yaml
+++ b/ci-operator/jobs/codeready-toolchain/toolchain-common/codeready-toolchain-toolchain-common-master-postsubmits.yaml
@@ -11,7 +11,11 @@ postsubmits:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
+        - --branch=master
         - --give-pr-author-access-to-namespace=true
+        - --org=codeready-toolchain
+        - --repo=toolchain-common
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=build
         command:
@@ -48,7 +52,11 @@ postsubmits:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
+        - --branch=master
         - --give-pr-author-access-to-namespace=true
+        - --org=codeready-toolchain
+        - --repo=toolchain-common
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=test
         command:
