--- a/ci-operator/jobs/openshift/windows-machine-config-operator/openshift-windows-machine-config-operator-release-4.4-presubmits.yaml
+++ b/ci-operator/jobs/openshift/windows-machine-config-operator/openshift-windows-machine-config-operator-release-4.4-presubmits.yaml
@@ -256,8 +256,12 @@ presubmits:
       containers:
       - args:
         - --artifact-dir=$(ARTIFACTS)
+        - --branch=release-4.4
         - --give-pr-author-access-to-namespace=true
         - --lease-server=http://boskos
+        - --org=openshift
+        - --repo=windows-machine-config-operator
+        - --resolver-address=http://ci-operator-configresolver-ci.svc.ci.openshift.org
         - --secret-dir=/usr/local/test-e2e-tools-cluster-profile
         - --sentry-dsn-path=/etc/sentry-dsn/ci-operator
         - --target=test-e2e-tools
