add integr8ly tower secret mapping

--- a/core-services/secret-mirroring/_mapping.yaml
+++ b/core-services/secret-mirroring/_mapping.yaml
@@ -90,6 +90,18 @@ secrets:
     namespace: ci-stg
     name: integr8ly-ci-secrets
 - from:
+    namespace: integr8ly
+    name: integr8ly-tower-secrets
+  to:
+    namespace: ci
+    name: integr8ly-tower-secrets
+- from:
+    namespace: integr8ly
+    name: integr8ly-tower-secrets
+  to:
+    namespace: ci-stg
+    name: integr8ly-tower-secrets
+- from:
     namespace: osde2e-secrets
     name: secrets
   to:
