--- a/ci-operator/config/openshift/ironic-image/openshift-ironic-image-release-4.3.yaml
+++ b/ci-operator/config/openshift/ironic-image/openshift-ironic-image-release-4.3.yaml
@@ -11,6 +11,10 @@ build_root:
 images:
 - dockerfile_path: Dockerfile.ocp
   from: base-os
+  inputs:
+    base-os:
+      as:
+        - ironic-builder
   to: ironic
 promotion:
   name: "4.3"
