Add verify-deps check for openshift/oc

--- a/ci-operator/config/openshift/oc/openshift-oc-master.yaml
+++ b/ci-operator/config/openshift/oc/openshift-oc-master.yaml
@@ -123,6 +123,11 @@ tests:
     make verify -k --warn-undefined-variables
   container:
     from: bin
+- as: verify-deps
+  commands: |
+    make verify-deps -k --warn-undefined-variables
+  container:
+    from: src
 - artifact_dir: /tmp/artifacts
   as: unit
   commands: |
