slack alerts for cnf periodic e2e test failures
Signed-off-by: David Vossel <davidvossel@gmail.com>

--- a/cluster/ci/monitoring/mixins/prometheus_out/alertmanager.yaml
+++ b/cluster/ci/monitoring/mixins/prometheus_out/alertmanager.yaml
@@ -27,6 +27,13 @@ receivers:
     icon_url: https://avatars3.githubusercontent.com/u/3380462
     link_names: true
     text: '{{ template "custom_slack_text" . }}'
+- name: slack-kni-cnf
+  slack_configs:
+  - api_url: '{{ api_url }}'
+    channel: '#forum-kni-cnf'
+    icon_url: https://avatars3.githubusercontent.com/u/3380462
+    link_names: true
+    text: '{{ template "custom_slack_text" . }}'
 - name: slack-openshift-library
   slack_configs:
   - api_url: '{{ api_url }}'
@@ -49,6 +56,9 @@ route:
   - match:
       team: build-cop
     receiver: slack-endurance-cluster
+  - match:
+      team: kni-cnf
+    receiver: slack-kni-cnf
   - match:
       team: developer-experience
     receiver: slack-openshift-library
