--- a/cluster/ci/monitoring/mixins/prometheus_out/prometheus_rule_prow.yaml
+++ b/cluster/ci/monitoring/mixins/prometheus_out/prometheus_rule_prow.yaml
@@ -335,6 +335,16 @@ spec:
       labels:
         severity: critical
         team: build-cop
+    - alert: periodic-ci-openshift-kni-cnf-features-deploy-master-cnf-e2e-gcp-periodic-failures
+      annotations:
+        message: '@ Prow job periodic-ci-openshift-kni-cnf-features-deploy-master-cnf-e2e-gcp-periodic
+          has failures. Check on <https://prow.svc.ci.openshift.org/?type=periodic&job=periodic-ci-openshift-kni-cnf-features-deploy-master-cnf-e2e-gcp-periodic|deck>'
+      expr: |
+        rate(prowjob_state_transitions{job_name="periodic-ci-openshift-kni-cnf-features-deploy-master-cnf-e2e-gcp-periodic",state="failure"}[5m]) > 0
+      for: 1m
+      labels:
+        severity: critical
+        team: kni-cnf
     - alert: periodic-openshift-library-import-failures
       annotations:
         message: '@devex Prow job periodic-openshift-library-import has failures.
