squash merges in verification tests repo by default

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -437,6 +437,7 @@ tide:
     openshift/odo: squash
     openshift/odo-init-image: squash
     openshift/template-service-broker-operator: squash
+    openshift/verification-tests: squash
     redhat-developer/openshift-jenkins-operator: rebase
     redhat-developer/service-binding-operator: squash
   pr_status_base_urls:
